--- a/package.json
+++ b/package.json
@@ -21,18 +21,27 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.10.7",
     "@vercel/analytics": "^1.1.1",
+    "boring-avatars": "^1.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "ethers": "^6.9.0",
+    "jose": "^5.1.2",
+    "js-cookie": "^3.0.5",
+    "ky": "^1.1.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "web3modal": "^1.9.12",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
